; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_RefreshLocalMacAddressList.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_RefreshLocalMacAddressList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@local_mac_list_lock = common dso_local global i32 0, align 4
@local_mac_list = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RefreshLocalMacAddressList() #0 {
  %1 = load i32, i32* @local_mac_list_lock, align 4
  %2 = call i32 @Lock(i32 %1)
  %3 = load i32*, i32** @local_mac_list, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32*, i32** @local_mac_list, align 8
  %7 = call i32 @FreeNicList(i32* %6)
  br label %8

8:                                                ; preds = %5, %0
  %9 = call i32* (...) @GetNicList()
  store i32* %9, i32** @local_mac_list, align 8
  %10 = load i32, i32* @local_mac_list_lock, align 4
  %11 = call i32 @Unlock(i32 %10)
  ret void
}

declare dso_local i32 @Lock(i32) #1

declare dso_local i32 @FreeNicList(i32*) #1

declare dso_local i32* @GetNicList(...) #1

declare dso_local i32 @Unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
